<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="@drawable/bgbgbg1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.isi24.taskmanager.NoviZadatak">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/imez"
            android:id="@+id/et1" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/pozadina"
                android:textColor="@color/tekst"
                android:text="@string/pickd"
                android:textStyle="bold|normal"
                android:fontFamily="casual"
                android:layout_margin="3dp"
                android:elevation="1dp"
                android:translationZ="1dp"
                android:id="@+id/picdate"
                />
        </LinearLayout>
        <TimePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner">
        </TimePicker>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50mm"
            android:hint="@string/opis"
            android:id="@+id/et2"
            android:layout_gravity="center"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/podseti"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="1dp"
                android:layout_margin="3dp"
                android:translationZ="1dp"
                android:id="@+id/but1"
                android:background="@color/tamnoljubicasta"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/but2"
                android:elevation="1dp"
                android:layout_margin="3dp"
                android:translationZ="1dp"
                android:background="@color/zuta"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/but3"
                android:layout_weight="1"
                android:elevation="1dp"
                android:layout_margin="3dp"
                android:translationZ="1dp"
                android:background="@color/colorAccent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="1dp"
                android:id="@+id/but4"
                android:layout_margin="3dp"
                android:background="@color/pozadina"
                android:translationZ="1dp"
                android:textColor="@color/tekst"
                android:textStyle="bold|normal"
                android:fontFamily="casual"
                android:text="@string/dodaj"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="1dp"
                android:id="@+id/but5"
                android:background="@color/pozadina"
                android:textColor="@color/tekst"
                android:layout_margin="3dp"
                android:translationZ="1dp"
                android:textStyle="bold|normal"
                android:fontFamily="casual"
                android:text="@string/otkazi"/>
        </LinearLayout>

    </android.widget.LinearLayout>
</ScrollView>